--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 PORT=8585
 NODE_ENV=development
 
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=tab1k
-DB_PASSWORD=TOBI8585
-DB_DATABASE=trd_db
-DB_DIALECT=postgres
+DB_HOST=85.116.187.153
+DB_PORT=3307
+DB_USERNAME=app_user
+DB_PASSWORD=app_pass
+DB_DATABASE=app_db
+DB_DIALECT=mysql
 
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://localhost:6380
